--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -8,7 +8,7 @@ FROM openjdk:8-jdk AS builder
 MAINTAINER Netflix OSS <conductor@netflix.com>
 
 # Copy the project directly onto the image
-COPY . /conductor
+COPY ../../  /conductor
 WORKDIR /conductor
 
 # Build the server on run
